# pocket-character

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  README.md  REPORT.md  package.json  tsconfig.json
app/: main.ts  sdk.ts
crates/pocket-character/: Cargo.toml
crates/pocket-character-core/: Cargo.toml
crates/pocket-character-core/src/: lib.rs
crates/pocket-character/src/: guest.rs  main.rs  widget.rs
scripts/: airi-vrm.ts  build-ui.ts  fetch-assets.ts  measure.ts  widget.ts
